CHANGES:

- added [BETA] Way of The Dragon subclass
- changed SoulBlade Empower Weapon recharge rate to short rest
- fixed race slots inspection UI interaction with single class Warlock